Iteration 1: DONE | Iteracion 2 to 3: WIP

--- a/starter-code/views/index.hbs
+++ b/starter-code/views/index.hbs
@@ -1,2 +1,8 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
+<a href="/places">View Places</a>
+
+<div id="map"></div>
+
+
+<script type="text/javascript" src="/javascripts/map.js"></script>
