--- a/starter-code/views/layout.hbs
+++ b/starter-code/views/layout.hbs
@@ -6,11 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>{{title}}</title>
   <link rel="stylesheet" href="/stylesheets/style.css" />
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDNG54dcbN8aXu2odZa7BC0Hyq0EGX6hh4"></script>
 </head>
 <body>
 
   {{{body}}}
 
+  
   <script src="/javascripts/script.js"></script>
 </body>
 </html>
